exports[`alignVertical center alignHorizontal right`] = `
<div
  data-css-16fd8ps="*"
  style={undefined}>
  <div
    data-css-1on9f6q="*"
    style={undefined} />
  <div
    data-css-1s71gus="*"
    style={undefined} />
  <div
    data-css-3yrej3="*"
    style={undefined} />
</div>
`;

exports[`console.logs refNode`] = `
<div
  data-css-33m34m="*"
  style={undefined} />
`;

exports[`only using inlineStyle`] = `
<div
  data-css-33m34m="*"
  style={
    Object {
      "backgroundColor": "lightgrey",
      "border": "1px solid black",
      "height": 500
    }
  }>
  <div
    data-css-33m34m="*"
    style={
      Object {
        "backgroundColor": "red",
        "flex": 1
      }
    } />
  <div
    data-css-33m34m="*"
    style={
      Object {
        "backgroundColor": "green",
        "flex": 1
      }
    } />
  <div
    data-css-33m34m="*"
    style={
      Object {
        "backgroundColor": "blue",
        "flex": 1
      }
    } />
</div>
`;

exports[`with children Views and style prop`] = `
<div
  data-css-ab0pxa="*"
  style={undefined}>
  <div
    data-css-1wwt2nx="*"
    style={undefined} />
  <div
    data-css-14nlop9="*"
    style={undefined} />
  <div
    data-css-1bbyl59="*"
    style={undefined} />
</div>
`;

exports[`with children divs and inline style`] = `
<div
  data-css-ab0pxa="*"
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20
      }
    } />
</div>
`;

exports[`with children flex=1 Views`] = `
<div
  data-css-ab0pxa="*"
  style={undefined}>
  <div
    data-css-1wwt2nx="*"
    style={undefined} />
  <div
    data-css-14nlop9="*"
    style={undefined} />
  <div
    data-css-1bbyl59="*"
    style={undefined} />
</div>
`;
